# python_setuptools_sandbox

./: .gitignore  README.md  pyproject.toml  setup.py  testpkg.py
.github/workflows/: wheels.yaml
src/setuptools_sandbox/: __init__.py  pythoncode.py  some_ccode.c
